CDDB: add the correct pregap for calculation

150sectors or 2 seconds

Should close #4370